--- a/src/components/layout/BackButton.scss
+++ b/src/components/layout/BackButton.scss
@@ -54,5 +54,5 @@
 
 @keyframes cubeEnter{
     from{margin-left: -20em;}
-    to{margin-left: -0.5em;}
+    to{margin-left: 0;}
 }
